page l'acoste mobile

--- a/l'acoste.html
+++ b/l'acoste.html
@@ -63,8 +63,8 @@
             </tr>
             <tr>
                 <td>
-                    Prenez la marque de votre choix et cr&aacute;er lui un nouvel univers tout en gardant des
-                    &aacute;l&aacute;ments cl&aacute;s de son identit&aacute;.
+                    Prenez la marque de votre choix et cr&eacute;er lui un nouvel univers tout en gardant des
+                    &eacute;l&eacute;ments cl&eacute;s de son identit&eacute;.
                 </td>
                 <td>
                     Nous &eacute;tions en &eacute;quipe de deux
@@ -73,8 +73,6 @@
                     Illustrator
                     <br>
                     Pinterest
-                    <br>
-                    Miro
                     <br>
                     Procreate
                 </td>
