--- a/m/l'acoste.html
+++ b/m/l'acoste.html
@@ -13,75 +13,77 @@
     <link rel="stylesheet" href="css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
-    <script src="data/js/device-redirect-computer.js"></script>
+    <script src="../data/js/device-redirect-mobile.js"></script>
 </head>
 
 <body>
     <div class="header-background">
         <nav>
-            <a href="index.html" class="nav-aTxt"><button class="nav-btn-txt">Accueil</button></a>
-            <a href="index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
-            <a href="qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
-            <a href="contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
-            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
-                    class="btn-cv">mon CV</button></a>
-            <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button
-                    class="btn-behance">BE</button></a>
-            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button
-                    class="btn-linkedin">IN</button></a>
+            <div class="navbar">
+                <div class="container nav-container">
+                    <input class="checkbox" type="checkbox" name="" id="" />
+                    <div class="logo">
+                        <img src="../data/imgs/all/MTI.png" alt="Logo">
+                    </div>
+                    <div class="hamburger-lines">
+                        <span class="line line1"></span>
+                        <span class="line line2"></span>
+                        <span class="line line3"></span>
+                    </div>
+                    <div class="menu-items">
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="index.html#projets">Projets</a></li>
+                        <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button
+                                    class="nav_btn-cv">mon CV</button></a></li>
+                        <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img
+                                        src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin"
+                                        class="nav_logo-lkdn"></button></a></li>
+                        <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button
+                                    class="nav_btn-bhnc"><img src="../data/imgs/all/logo-behance.png"
+                                        alt="logo de behnace" class="nav_logo-bhnc"></button></a></li>
+                    </div>
+                </div>
+            </div>
         </nav>
 
-        <div class="header">
-            <div class="box-top-header">
+        <div class="hero">
+            <div class="box-top-hero">
                 <p class="le">
                     le
                 </p>
-                <p class="header_subtitle">
+                <p class="hero_subtitle">
                     projet personnel
                 </p>
             </div>
-            <div class="box-header-bot">
-                <h1 class="header-h1">
+            <div class="box-hero-h1">
+                <h1 class="hero-h1">
                     L&apos;ACOSTE
                 </h1>
             </div>
         </div>
-        <table class="t1">
-            <tr>
-                <th class="title-table1">
-                    r&#233;sum&#233;/brief
-
-                </th>
-                <th class="title-table2">
-                    &eacute;quipe
-
-                </th>
-                <th class="title-table3">
-                    logiciels
-
-                </th>
-            </tr>
-            <tr>
-                <td>
-                    Prenez la marque de votre choix et cr&aacute;er lui un nouvel univers tout en gardant des
-                    &aacute;l&aacute;ments cl&aacute;s de son identit&aacute;.
-                </td>
-                <td>
-                    Nous &eacute;tions en &eacute;quipe de deux
-                </td>
-                <td>
-                    Illustrator
-                    <br>
-                    Pinterest
-                    <br>
-                    Miro
-                    <br>
-                    Procreate
-                </td>
-            </tr>
-        </table>
+        <div class="bot-header">
+            <h3>r&#233;sum&#233;/brief</h3>
+            <p class="text-header">
+                Prenez la marque de votre choix et cr&eacute;er lui un nouvel univers tout en gardant des
+                &eacute;l&eacute;ments cl&eacute;s de son identit&eacute;.
+            </p>
+            <h3>&eacute;quipe</h3>
+            <p class="text-header">
+                Nous &eacute;tions en &eacute;quipe de deux
+            </p>
+            <h3>logiciels</h3>
+            <p class="text-header">
+                Illustrator
+                <br>
+                Pinterest
+                <br>
+                Procreate
+            </p>
+        </div>
     </div>
-    <img src="data/imgs/L'ACOSTE/L'ACOSTE-baniere-1.jpg" alt="Bannière de L'ACOSTE" class="banniere">
+    <img src="../data/imgs/L'ACOSTE/L'ACOSTE-baniere-1.jpg" alt="Bannière de L'ACOSTE" class="banniere">
     <div class="background-white">
         <div class="box-h2">
             <div class="box-le">
@@ -111,15 +113,15 @@
             sa queue le coeur rouge amour.
         </div>
 
-        <img class="banniere" src="data/imgs/L'ACOSTE/logo_explication.jpg" alt="Logo de L'ACOSTE expliqué.">
+        <img class="banniere" src="../data/imgs/L'ACOSTE/logo_explication.jpg" alt="Logo de L'ACOSTE expliqué.">
 
         <div class="embleme">
-            <img src="data/imgs/L'ACOSTE/embleme-iconique.jpg"
+            <img src="../data/imgs/L'ACOSTE/embleme-iconique.jpg"
                 alt="Illustration de l'embl&egrave;me iconique de l'acoste" class="embleme-img">
             <p><b>L&apos;embl&egrave;me iconique</b></p>
         </div>
     </div>
-    <img class="banniere" src="data/imgs/L'ACOSTE/apercu-pages.jpg" alt="Aperçu des pages de l'application.">
+    <img class="banniere" src="../data/imgs/L'ACOSTE/apercu-pages.jpg" alt="Aperçu des pages de l'application.">
     <div class="background-white">
 
         <div class="box-h2">
@@ -148,7 +150,8 @@
                 diff&eacute;rents crocos
             </h2>
         </div>
-        <img src="data/imgs/L'ACOSTE/crocos.jpg"
+        <br>
+        <img src="../data/imgs/L'ACOSTE/crocos.jpg"
             alt="Illustrations des crocodiles de différentes couleures : rose, jaune, rouge et vert foncé."
             class="banniere">
         <p class="text-corp">
@@ -182,7 +185,8 @@
                 design system
             </h2>
         </div>
-        <img src="data/imgs/L'ACOSTE/design-system.jpg" alt="Illustration du design system." class="banniere">
+        <br>
+        <img src="../data/imgs/L'ACOSTE/design-system.jpg" alt="Illustration du design system." class="banniere">
 
         <div class="box-h2">
             <div class="box-le">
@@ -202,10 +206,10 @@
             <br>
         </p>
         <div class="box_img-flex4">
-            <img src="data/imgs/L'ACOSTE/onboarding1.jpg" alt="Image de l'onboarding 1." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/onboarding2.jpg" alt="Image de l'onboarding 2." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/onboarding3.jpg" alt="Image de l'onboarding 3." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/onboarding4.jpg" alt="Image de l'onboarding 4." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/onboarding1.jpg" alt="Image de l'onboarding 1." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/onboarding2.jpg" alt="Image de l'onboarding 2." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/onboarding3.jpg" alt="Image de l'onboarding 3." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/onboarding4.jpg" alt="Image de l'onboarding 4." class="img-flex">
         </div>
 
         <p class="text-corp">
@@ -216,10 +220,10 @@
             <br>
         </p>
         <div class="box_img-flex4">
-            <img src="data/imgs/L'ACOSTE/inscription1.jpg" alt="Image de l'inscription 1." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/inscription2.jpg" alt="Image de l'inscription 2." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/inscription3.jpg" alt="Image de l'inscription 3." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/inscription4.jpg" alt="Image de l'inscription 4." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/inscription1.jpg" alt="Image de l'inscription 1." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/inscription2.jpg" alt="Image de l'inscription 2." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/inscription3.jpg" alt="Image de l'inscription 3." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/inscription4.jpg" alt="Image de l'inscription 4." class="img-flex">
         </div>
 
         <p class="text-corp">
@@ -227,10 +231,10 @@
             <br>
         </p>
         <div class="box_img-flex4">
-            <img src="data/imgs/L'ACOSTE/actif1.jpg" alt="Image actif 1." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/actif2.jpg" alt="Image actif 2." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/actif3.jpg" alt="Image actif 3." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/actif4.jpg" alt="Image actif 4." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/actif1.jpg" alt="Image actif 1." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/actif2.jpg" alt="Image actif 2." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/actif3.jpg" alt="Image actif 3." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/actif4.jpg" alt="Image actif 4." class="img-flex">
         </div>
 
         <p class="text-corp">
@@ -240,8 +244,8 @@
             <br>
         </p>
         <div class="box_img-flex2">
-            <img src="data/imgs/L'ACOSTE/choix-crocos1.jpg" alt="Image du choix des crocos 1." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/choix-crocos2.jpg" alt="Image du choix des crocos 2." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/choix-crocos1.jpg" alt="Image du choix des crocos 1." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/choix-crocos2.jpg" alt="Image du choix des crocos 2." class="img-flex">
         </div>
 
         <p class="text-corp">
@@ -258,8 +262,8 @@
                     <b>S&eacute;lectionner</b>
                 </p>
                 <div>
-                    <img src="data/imgs/L'ACOSTE/selectionner1.jpg" alt="Image de la selection 1." class="img-2columns">
-                    <img src="data/imgs/L'ACOSTE/selectionner2.jpg" alt="Image de la selection 2." class="img-2columns">
+                    <img src="../data/imgs/L'ACOSTE/selectionner1.jpg" alt="Image de la selection 1." class="img-2columns">
+                    <img src="../data/imgs/L'ACOSTE/selectionner2.jpg" alt="Image de la selection 2." class="img-2columns">
                 </div>
             </div>
             <div class="column">
@@ -267,8 +271,8 @@
                     <b>En d&eacute;tails</b>
                 </p>
                 <div>
-                    <img src="data/imgs/L'ACOSTE/en-details1.jpg" alt="Image de en details 1." class="img-2columns">
-                    <img src="data/imgs/L'ACOSTE/en-details2.jpg" alt="Image de en details 2." class="img-2columns">
+                    <img src="../data/imgs/L'ACOSTE/en-details1.jpg" alt="Image de en details 1." class="img-2columns">
+                    <img src="../data/imgs/L'ACOSTE/en-details2.jpg" alt="Image de en details 2." class="img-2columns">
                 </div>
             </div>
         </div>
@@ -281,9 +285,9 @@
             <br>
         </p>
         <div class="box_img-flex3">
-            <img src="data/imgs/L'ACOSTE/swipe1.jpg" alt="Image du swipe 1." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/swipe2.jpg" alt="Image du swipe 2." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/swipe3.jpg" alt="Image du swipe 3." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/swipe1.jpg" alt="Image du swipe 1." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/swipe2.jpg" alt="Image du swipe 2." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/swipe3.jpg" alt="Image du swipe 3." class="img-flex">
         </div>
 
         <p class="text-corp">
@@ -294,8 +298,8 @@
             <br>
         </p>
         <div class="box_img-flex2">
-            <img src="data/imgs/L'ACOSTE/like1.jpg" alt="Image du like 1." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/like2.jpg" alt="Image du like 2." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/like1.jpg" alt="Image du like 1." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/like2.jpg" alt="Image du like 2." class="img-flex">
         </div>
 
         <p class="text-corp">
@@ -306,8 +310,8 @@
             <br>
         </p>
         <div class="box_img-flex2">
-            <img src="data/imgs/L'ACOSTE/chat1.jpg" alt="Image de la messagerie 1." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/chat2.jpg" alt="Image de la messagerie 2." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/chat1.jpg" alt="Image de la messagerie 1." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/chat2.jpg" alt="Image de la messagerie 2." class="img-flex">
         </div>
 
         <p class="text-corp">
@@ -317,21 +321,21 @@
             <br>
         </p>
         <div class="box_img-flex3">
-            <img src="data/imgs/L'ACOSTE/profil1.jpg" alt="Image du profil 1." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/profil2.jpg" alt="Image du profil 2." class="img-flex">
-            <img src="data/imgs/L'ACOSTE/profil3.jpg" alt="Image du profil 2." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/profil1.jpg" alt="Image du profil 1." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/profil2.jpg" alt="Image du profil 2." class="img-flex">
+            <img src="../data/imgs/L'ACOSTE/profil3.jpg" alt="Image du profil 2." class="img-flex">
         </div>
     </div>
 
     <footer>
-        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
+        <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
                 class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
-        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png"
+        <a href="https://www.behance.net/mthillayisnard"><img src="../data/imgs/all/logo-behance.png"
                 class="img-footer"></a>
-        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png"
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="../data/imgs/all/logo-linkedin.png"
                 class="img-footer"></a>
     </footer>
 </body>
