découvrir le projet pour l'acoste sur index

--- a/m/index.html
+++ b/m/index.html
@@ -157,7 +157,7 @@
                 <div class="container-btn-projects-cards">
                     <a href="l'acoste.html">
                         <button class="projects-buttons-left">
-                            &Agrave; venir
+                            D&eacute;couvrir le projet
                         </button>
                     </a>
                     <a href="https://www.behance.net/gallery/167982615/LACOSTE-Refonte-didentit/modules/949682175"
