page bouygues telecom fixe

--- a/index.html
+++ b/index.html
@@ -162,15 +162,15 @@
                 </div>
             </div>
             <div class="box-card">
-                <a href="bouygues-telecom.html">
+                <a href="bouygues_telecom.html">
                     <img src="data/imgs/index/bouygues-telecom.jpg" alt="Image d'illustration du projet Bouygues Telecom." class="project-img">
                 </a>
                 <h3 class="project-title">Bouygues Telecom</h3>
                 <p class="project-subtitle">Proposition de solution</p>
                 <div class="container-btn-projects-cards">
-                    <a href="bouygues-telecom.html">
+                    <a href="bouygues_telecom.html">
                         <button class="projects-buttons-left">
-                            &Agrave; venir
+                            D&eacute;couvrir le projet
                         </button>
                     </a>
                     <a href="https://www.behance.net/gallery/170664469/Le-mobile-reconditionn-Bouygues-Telecom/modules/962947031" target="_blank">
