--- a/leria.html
+++ b/leria.html
@@ -33,7 +33,7 @@
                 <p class="le">
                     le
                 </p>
-                <p class="create_site">
+                <p class="p2-header">
                     projet de cr&#233;ation de site
                 </p>
             </div>
