modifs demandées -captcha + contact

--- a/m/index.html
+++ b/m/index.html
@@ -45,7 +45,7 @@
                         <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button
-                                    class="nav_btn-cv">mon CV</button></a></li>
+                                    class="nav_btn-cv">CV</button></a></li>
                         <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img
                                         src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin"
                                         class="nav_logo-lkdn"></button></a></li>
@@ -108,46 +108,6 @@
                 </div>
             </div>
             <div class="box-card">
-                <a href="sylvassur.html">
-                    <img src="../data/imgs/index/sylvassur.jpg" alt="Image d'illustration du projet Sylvassur."
-                        class="project-img">
-                </a>
-                <h3 class="project-title">Sylvassur</h3>
-                <p class="project-subtitle">Création Web & vidéos tutos</p>
-                <div class="container-btn-projects-cards">
-                    <a href="sylvassur.html">
-                        <button class="projects-buttons-left">
-                            &Agrave; venir
-                        </button>
-                    </a>
-                    <a href="http://www.sylvassur.com/" target="_blank">
-                        <button class="projects-buttons-right">
-                            Site Web
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="box-card">
-                <a href="autopanneassur.html">
-                    <img src="../data/imgs/index/autopanneassur.jpg"
-                        alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
-                </a>
-                <h3 class="project-title">AutoPanneAssur</h3>
-                <p class="project-subtitle">Création Web</p>
-                <div class="container-btn-projects-cards">
-                    <a href="autopanneassur.html">
-                        <button class="projects-buttons-left">
-                            &Agrave; venir
-                        </button>
-                    </a>
-                    <a href="https://autopanneassur.fr/" target="_blank">
-                        <button class="projects-buttons-right">
-                            Site Web
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="box-card">
                 <a href="l'acoste.html">
                     <img src="../data/imgs/index/l'acoste.jpg" alt="Image d'illustration du projet L’ACOSTE."
                         class="project-img">
@@ -161,27 +121,6 @@
                         </button>
                     </a>
                     <a href="https://www.behance.net/gallery/167982615/LACOSTE-Refonte-didentit/modules/949682175"
-                        target="_blank">
-                        <button class="projects-buttons-right">
-                            Behance
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="box-card">
-                <a href="gfa.html">
-                    <img src="../data/imgs/index/gfa.jpg" alt="Image d'illustration du projet GFA Funding."
-                        class="project-img">
-                </a>
-                <h3 class="project-title">GFA Funding</h3>
-                <p class="project-subtitle">Création d’identité</p>
-                <div class="container-btn-projects-cards">
-                    <a href="gfa.html">
-                        <button class="projects-buttons-left">
-                            &Agrave; venir
-                        </button>
-                    </a>
-                    <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389"
                         target="_blank">
                         <button class="projects-buttons-right">
                             Behance
@@ -206,6 +145,67 @@
                         target="_blank">
                         <button class="projects-buttons-right">
                             Behance
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="box-card">
+                <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389">
+                    <img src="../data/imgs/index/gfa.jpg" alt="Image d'illustration du projet GFA Funding."
+                        class="project-img">
+                </a>
+                <h3 class="project-title">GFA Funding</h3>
+                <p class="project-subtitle">Création d’identité</p>
+                <div class="container-btn-projects-cards">
+                <!--<a href="gfa.html">-->
+                    <button class="projects-buttons-left" style="filter: grayscale(1);">
+                        &Agrave; venir
+                    </button>
+            <!--</a>-->
+                    <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389"
+                        target="_blank">
+                        <button class="projects-buttons-right">
+                            Behance
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="box-card">
+                <a href="sylvassur.html">
+                    <img src="../data/imgs/index/sylvassur.jpg" alt="Image d'illustration du projet Sylvassur."
+                        class="project-img">
+                </a>
+                <h3 class="project-title">Sylvassur</h3>
+                <p class="project-subtitle">Création Web & vidéos tutos</p>
+                <div class="container-btn-projects-cards">
+                <!--<a href="sylvassur.html">-->
+                        <button class="projects-buttons-left" style="filter: grayscale(1);">
+                            &Agrave; venir
+                        </button>
+                <!--</a>-->
+                    <a href="http://www.sylvassur.com/" target="_blank">
+                        <button class="projects-buttons-right">
+                            Site Web
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="box-card">
+                <a href="https://autopanneassur.fr/">
+                    <img src="../data/imgs/index/autopanneassur.jpg"
+                        alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
+                </a>
+                <h3 class="project-title">AutoPanneAssur</h3>
+                <p class="project-subtitle">Création Web</p>
+                <div class="container-btn-projects-cards">
+                <!--<a href="autopanneassur.html">-->
+                        <button class="projects-buttons-left" style="filter: grayscale(1);">
+                            &Agrave; venir
+                        </button>
+                <!--</a>-->
+                    <a href="https://autopanneassur.fr/" target="_blank">
+                        <button class="projects-buttons-right">
+                            Site Web
                         </button>
                     </a>
                 </div>
