--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <a href="index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
             <a href="qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
             <a href="contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
-            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">mon CV</button></a>
-            <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button class="btn-behance">BE</button></a>
-            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button class="btn-linkedin">IN</button></a>
+            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">CV</button></a>
+            <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button class="btn-behance">Be</button></a>
+            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button class="btn-linkedin">In</button></a>
         </nav>
 
         <div class="container-header">
@@ -86,44 +86,6 @@
                 </div>
             </div>
             <div class="box-card">
-                <a href="sylvassur.html">
-                    <img src="data/imgs/index/sylvassur.jpg" alt="Image d'illustration du projet Sylvassur." class="project-img">
-                </a>
-                <h3 class="project-title">Sylvassur</h3>
-                <p class="project-subtitle">Création Web & vidéos tutos</p>
-                <div class="container-btn-projects-cards">
-                    <a href="sylvassur.html">
-                        <button class="projects-buttons-left">
-                            &Agrave; venir
-                        </button>
-                    </a>
-                    <a href="http://www.sylvassur.com/" target="_blank">
-                        <button class="projects-buttons-right">
-                            Site Web
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="box-card">
-                <a href="autopanneassur.html">
-                    <img src="data/imgs/index/autopanneassur.jpg" alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
-                </a>
-                <h3 class="project-title">AutoPanneAssur</h3>
-                <p class="project-subtitle">Création Web</p>
-                <div class="container-btn-projects-cards">
-                    <a href="autopanneassur.html">
-                        <button class="projects-buttons-left">
-                            &Agrave; venir
-                        </button>
-                    </a>
-                    <a href="https://autopanneassur.fr/" target="_blank">
-                        <button class="projects-buttons-right">
-                            Site Web
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="box-card">
                 <a href="l'acoste.html">
                     <img src="data/imgs/index/l'acoste.jpg" alt="Image d'illustration du projet L’ACOSTE." class="project-img">
                 </a>
@@ -136,25 +98,6 @@
                         </button>
                     </a>
                     <a href="https://www.behance.net/gallery/167982615/LACOSTE-Refonte-didentit/modules/949682175" target="_blank">
-                        <button class="projects-buttons-right">
-                            Behance
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="box-card">
-                <a href="gfa.html">
-                    <img src="data/imgs/index/gfa.jpg" alt="Image d'illustration du projet GFA Funding." class="project-img">
-                </a>
-                <h3 class="project-title">GFA Funding</h3>
-                <p class="project-subtitle">Création d’identité</p>
-                <div class="container-btn-projects-cards">
-                    <a href="gfa.html">
-                        <button class="projects-buttons-left">
-                            &Agrave; venir
-                        </button>
-                    </a>
-                    <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389" target="_blank">
                         <button class="projects-buttons-right">
                             Behance
                         </button>
@@ -176,6 +119,63 @@
                     <a href="https://www.behance.net/gallery/170664469/Le-mobile-reconditionn-Bouygues-Telecom/modules/962947031" target="_blank">
                         <button class="projects-buttons-right">
                             Behance
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="box-card">
+                <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389">
+                    <img src="data/imgs/index/gfa.jpg" alt="Image d'illustration du projet GFA Funding." class="project-img">
+                </a>
+                <h3 class="project-title">GFA Funding</h3>
+                <p class="project-subtitle">Création d’identité</p>
+                <div class="container-btn-projects-cards">
+                <!--<a href="gfa.html">-->
+                        <button class="projects-buttons-left" style="filter: grayscale(1);">
+                            &Agrave; venir
+                        </button>
+                <!--</a>-->
+                    <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389" target="_blank">
+                        <button class="projects-buttons-right">
+                            Behance
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="box-card">
+                <a href="http://www.sylvassur.com/">
+                    <img src="data/imgs/index/sylvassur.jpg" alt="Image d'illustration du projet Sylvassur." class="project-img">
+                </a>
+                <h3 class="project-title">Sylvassur</h3>
+                <p class="project-subtitle">Création Web & vidéos tutos</p>
+                <div class="container-btn-projects-cards">
+                <!--<a href="sylvassur.html">-->
+                        <button class="projects-buttons-left" style="filter: grayscale(1);">
+                            &Agrave; venir
+                        </button>
+                <!--</a>-->
+                    <a href="http://www.sylvassur.com/" target="_blank">
+                        <button class="projects-buttons-right">
+                            Site Web
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="box-card">
+                <a href="https://autopanneassur.fr">
+                    <img src="data/imgs/index/autopanneassur.jpg" alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
+                </a>
+                <h3 class="project-title">AutoPanneAssur</h3>
+                <p class="project-subtitle">Création Web</p>
+                <div class="container-btn-projects-cards">
+                <!--<a href="autopanneassur.html">-->
+                        <button class="projects-buttons-left" style="filter: grayscale(1);">
+                            &Agrave; venir
+                        </button>
+                <!--</a>-->
+                    <a href="https://autopanneassur.fr/" target="_blank">
+                        <button class="projects-buttons-right">
+                            Site Web
                         </button>
                     </a>
                 </div>
