--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </div>
     </div>
     <footer>
-        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
+        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" target="_blank" class="nav-aBtn"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
