--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
     <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
     <link rel="stylesheet" href="data/css/style-index.css">
-    <link rel="stylesheet" href="data/css/nav.css">
     <link rel="stylesheet" href="data/css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
@@ -26,13 +25,11 @@
 <body>
     <div class="fjaune" id="start">
         <nav>
-            <a href="index.html" class="nav-aTxt"><button class="nav-btn-txt">Accueil</button></a>
-            <a href="index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
-            <a href="qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
-            <a href="contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>
-            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">CV</button></a>
-            <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button class="btn-behance">Be</button></a>
-            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button class="btn-linkedin">In</button></a>
+            <a href="index.html"><button class="nav-btn-txt">Accueil</button></a>
+            <a href="index.html#projets"><button class="nav-btn-txt">Portfolio</button></a>
+            <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
+            <a href=""><button class="nav-btn-txt">Mon offre</button></a>
+            <a href="contact.html"><button class="nav-btn-txt">Contact</button></a>
         </nav>
 
         <div class="container-header">
@@ -47,12 +44,17 @@
                         <h1 class="horizontal-h1">Manon</h1>
                     </div>
                     <div class="button-container">
-                        <button>UI/UX Design</button>
-                        <button class="btn-2-acc">Web Design</button>
-                        <button class="btn-2-acc">Gestion de projet</button>
+                        <button>Web Design</button>
+                        <button class="btn-2-acc">UI design</button>
+                        <button class="btn-2-acc">UX Design Research</button>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="hero-footer">
+            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">Mon CV</button></a>
+            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/all/logo-behance.png" class="hero-footer_img1"></button></a>
+            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/all/logo-linkedin.png" class="hero-footer_img2"></button></a>
         </div>
     </div>
     <div class="f-project">
@@ -105,25 +107,6 @@
                 </div>
             </div>
             <div class="box-card">
-                <a href="bouygues_telecom.html">
-                    <img src="data/imgs/index/bouygues-telecom.jpg" alt="Image d'illustration du projet Bouygues Telecom." class="project-img">
-                </a>
-                <h3 class="project-title">Bouygues Telecom</h3>
-                <p class="project-subtitle">Proposition de solution</p>
-                <div class="container-btn-projects-cards">
-                    <a href="bouygues_telecom.html">
-                        <button class="projects-buttons-left">
-                            D&eacute;couvrir le projet
-                        </button>
-                    </a>
-                    <a href="https://www.behance.net/gallery/170664469/Le-mobile-reconditionn-Bouygues-Telecom/modules/962947031" target="_blank">
-                        <button class="projects-buttons-right">
-                            Behance
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="box-card">
                 <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389">
                     <img src="data/imgs/index/gfa.jpg" alt="Image d'illustration du projet GFA Funding." class="project-img">
                 </a>
@@ -136,6 +119,25 @@
                         </button>
                 <!--</a>-->
                     <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389" target="_blank">
+                        <button class="projects-buttons-right">
+                            Behance
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="box-card">
+                <a href="bouygues_telecom.html">
+                    <img src="data/imgs/index/bouygues-telecom.jpg" alt="Image d'illustration du projet Bouygues Telecom." class="project-img">
+                </a>
+                <h3 class="project-title">Bouygues Telecom</h3>
+                <p class="project-subtitle">Proposition de solution</p>
+                <div class="container-btn-projects-cards">
+                    <a href="bouygues_telecom.html">
+                        <button class="projects-buttons-left">
+                            D&eacute;couvrir le projet
+                        </button>
+                    </a>
+                    <a href="https://www.behance.net/gallery/170664469/Le-mobile-reconditionn-Bouygues-Telecom/modules/962947031" target="_blank">
                         <button class="projects-buttons-right">
                             Behance
                         </button>
@@ -183,7 +185,7 @@
         </div>
     </div>
     <footer>
-        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" target="_blank" class="nav-aBtn"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
+        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
