--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="container-btn-projects-cards">
                 <!--<a href="gfa.html">-->
                         <button class="projects-buttons-left" style="filter: grayscale(1);">
-                            &Agrave; venir
+                            &Agrave; venir...
                         </button>
                 <!--</a>-->
                     <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389" target="_blank">
@@ -153,7 +153,7 @@
                 <div class="container-btn-projects-cards">
                 <!--<a href="sylvassur.html">-->
                         <button class="projects-buttons-left" style="filter: grayscale(1);">
-                            &Agrave; venir
+                            &Agrave; venir...
                         </button>
                 <!--</a>-->
                     <a href="http://www.sylvassur.com/" target="_blank">
@@ -172,7 +172,7 @@
                 <div class="container-btn-projects-cards">
                 <!--<a href="autopanneassur.html">-->
                         <button class="projects-buttons-left" style="filter: grayscale(1);">
-                            &Agrave; venir
+                            &Agrave; venir...
                         </button>
                 <!--</a>-->
                     <a href="https://autopanneassur.fr/" target="_blank">
@@ -185,7 +185,8 @@
         </div>
     </div>
     <footer>
-        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
+        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
+        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" target="_blank"><button class="btn-cv-footer">D&eacute;couvrir mes offres</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
