--- a/m/index.html
+++ b/m/index.html
@@ -74,6 +74,9 @@
                     <button class="btn-2-acc">Gestion de projet</button>
                 </div>
             </div>
+            <div class="container-down-arrow">
+                <img src="../data/imgs/index/down-arrow.png" alt="Image de flèche qui pointe vers le bas." class="down-arrow">
+            </div>
         </div>
     </div>
     <div class="f-project">
@@ -214,7 +217,9 @@
     </div>
     <footer>
         <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
-                class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
+                class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a> <br/>
+        <a href="" class="nav-aBtn"><button
+            class="btn-cv-footer">D&eacute;couvrir mes offres</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
