--- a/m/index.html
+++ b/m/index.html
@@ -32,7 +32,23 @@
                 <div class="container nav-container">
                     <input class="checkbox" type="checkbox" name="" id="" />
                     <div class="logo">
-                        <img src="../data/imgs/all/MTI.png" alt="Logo">
+                        <div class="showed-links-nav">
+                            <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf">
+                                <button class="btn-cv">
+                                    Mon CV
+                                </button>
+                            </a>
+                            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173">
+                                <button class="btn-behance">
+                                    <!--<img src="../data/imgs/all/logo-behance.png" alt="logo de behnace" class="nav_logo-bhnc">-->
+                                </button>
+                            </a>
+                            <a href="https://www.behance.net/mthillayisnard">
+                                <button class="btn-linkedin">
+                                    <!--<img src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin" class="nav_logo-lkdn">-->
+                                </button>
+                            </a>
+                        </div>
                     </div>
                     <div class="hamburger-lines">
                         <span class="line line1"></span>
@@ -40,18 +56,26 @@
                         <span class="line line3"></span>
                     </div>
                     <div class="menu-items">
-                        <li><a href="index.html">Accueil</a></li>
-                        <li><a href="index.html#projets">Projets</a></li>
-                        <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button
-                                    class="nav_btn-cv">CV</button></a></li>
-                        <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img
-                                        src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin"
-                                        class="nav_logo-lkdn"></button></a></li>
-                        <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button
-                                    class="nav_btn-bhnc"><img src="../data/imgs/all/logo-behance.png"
-                                        alt="logo de behnace" class="nav_logo-bhnc"></button></a></li>
+                        <li>
+                            <a href="index.html">
+                            Accueil
+                        </a>
+                        </li>
+                        <li>
+                            <a href="index.html#projets">
+                            Projets
+                        </a>
+                        </li>
+                        <li>
+                            <a href="qui_suis-je.html">
+                            Qui suis-je ?
+                        </a>
+                        </li>
+                        <li>
+                            <a href="contact.html">
+                            Contact
+                        </a>
+                        </li>
                     </div>
                 </div>
             </div>
