Logos on index header
Logos are now in css in background

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta http-equiv="refresh" content="3600">
 
     <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
+    <link rel="stylesheet" href="data/css/nav.css">
     <link rel="stylesheet" href="data/css/style-index.css">
     <link rel="stylesheet" href="data/css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -53,8 +54,8 @@
         </div>
         <div class="hero-footer">
             <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">Mon CV</button></a>
-            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/all/logo-behance.png" class="hero-footer_img1"></button></a>
-            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/all/logo-linkedin.png" class="hero-footer_img2"></button></a>
+            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"></button></a>
+            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"></button></a>
         </div>
     </div>
     <div class="f-project">
