Modifs LERIA mobile
changements sur les tailles des éléments du footer et titres, ombre sur des imgs.

--- a/m/leria.html
+++ b/m/leria.html
@@ -59,7 +59,7 @@
         </div>
         <div class="box_p-bot-header">
             <h3>
-                r&#233;sum&#233;/brief
+                R&eacute;sum&eacute;/brief
             </h3>
             <p class="p-bot-header">
                 J&#8217;ai d&#251; accompagner la cr&#233;ation d&#8217;une filiale et les ai soutenus
@@ -72,7 +72,7 @@
                 J&#8217;ai accompagn&#233; seule une &#233;quipe de 3 juristes lors de ce projet.
             </p>
             <h3>
-                logiciels
+                Logiciels
             </h3>
             <p class="p-bot-header">
             Wordpress
@@ -83,20 +83,15 @@
             <br>
             Word
             </p>
+            <div class="container-down-arrow">
+                <img src="../data/imgs/index/down-arrow.png" alt="Image de flèche qui pointe vers le bas." class="down-arrow">
+            </div>
         </div>
     </div>
-    <img src="../data/imgs/leria/LERIA-eolienne.jpg" alt="Illustration d'une &eacute;olienne" class="img-eolienne">
     <div class="background-white">
-        <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    le
-                </p>
-            </div>
-            <h2 class="titre_rose">
-                projet
-            </h2>
-        </div>
+        <h2 class="titre_rose">
+            Le projet
+        </h2>
         <div class="text-corp">
             Qu'est ce que LERIA ?
             <br>
@@ -128,21 +123,10 @@
             le d&#233;couvrir avec elle et d&#233;couvrir en m&#234;me temps les codes que j'allais derri&#232;re
             appliquer au site.
         </p>
-        <div class="box-logo-leria">
-            <img class="logo_leria" src="../data/imgs/leria/Leria.png" alt="Logo de LERIA">
-        </div>
 
-        <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    les
-                </p>
-            </div>
-            <h2 class="titre_rose">
-                Wireframes
-            </h2>
-        </div>
-
+        <h2 class="titre_rose">
+            Les Wireframes
+        </h2>
         <p class="text-corp">
             Apr&#232;s avoir &#233;chang&#233; avec l&#8217;&#233;quipe pour un peu plus
             comprendre leur coeur de m&#233;tier et comprendre ce qu&#8217;elle voulait pr&#233;senter &#224; leur
@@ -156,16 +140,11 @@
                 alt="Image d'illustation pour les wireframes">
         </div>
     </div>
-    <div class="background_rose">
-        <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">le</p>
-            </div>
-            <h2 class="titre_rose">
-                site
-            </h2>
-        </div>
-        <div class="text-corp">Pour ce projet, j&#8217;ai du mettre les mains dans le
+    <div class="background_dark">
+        <h2 class="titre_rose">
+            Le site
+        </h2>
+        <div class="text-corp_white">Pour ce projet, j&#8217;ai du mettre les mains dans le
             cambouis et r&#233;aliser
             le site sur Wordpress. J&#8217;ai d&#233;cid&#233; de partir avec une base et de trouver un template
             compatible avec Wordpress. Avec les caract&#233;ristiques discut&#233;es avant et les wireframes et
@@ -173,14 +152,9 @@
         </div>
     </div>
     <div class="background-white">
-        <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">l'</p>
-            </div>
             <h2 class="titre_rose">
-                interface du site
+                L'interface du site
             </h2>
-        </div>
         <p class="text-corp">
             <b>
                 La page principale
@@ -219,23 +193,6 @@
             La demande &eacute;tait la suivante : lire le texte de haut en bas et avoir la volont&eacute; de faire
             d&eacute;filer. La page devait &ecirc;tre a&eacute;r&eacute;e et chaque fois que possible, nous avons choisi
             d'utiliser des pictogrammes pour soulager la vue.
-        </p>
-    </div>
-    <div class="background_rose">
-        <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    la
-                </p>
-            </div>
-            <h2 class="titre_rose">
-                conclusion
-            </h2>
-        </div>
-        <p class="text-corp">
-            Ce projet a été l'un des plus faciles à réaliser grâce à une équipe claire et précise dans ses idées.
-            L'élément challengeant a été le template choisi, j'ai dû apprendre à le manipuler et le personnaliser. Le
-            projet a pu être terminé en deux mois et aujourd'hui je suis toujours chargée de m'occuper des mises à jour.
         </p>
     </div>
 
