Correction d'erreurs ou de warn sur index mobile

--- a/m/index.html
+++ b/m/index.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
-<html lang="frfr">
+<html lang="fr-fr">
 
 <head>
-    <title>Accueil | mthillayisnard.fr</title>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Je suis une designer UI/UX créative et motivée, passionnée par l'innovation et la découverte de nouvelles approches pour améliorer l'expérience utilisateur. Mon expérience en design est complétée par mes compétences en UX suite à mes différentes expériences et projets professionnels mais aussi personnels.">
-    <meta http-equiv="refresh" content="3600">
+    <meta name="description" content="Je suis une designer UI/UX créative et motivée, passionnée par l'innovation et la découverte de nouvelles approches pour améliorer l'expérience utilisateur. Mon expérience en design est complétée par mes compétences en UX suite à mes différentes expériences et projets professionnels mais aussi personnels.">
+
+    <title>Accueil | mthillayisnard.fr</title>
 
     <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style-index.css">
-    <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/style-index.css" type="text/css">
+    <link rel="stylesheet" href="css/nav.css" type="text/css">
+    <link rel="stylesheet" href="css/footer.css" type="text/css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins'>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Inter'>
 
-    <script src="data/js/script-index.js"></script>
     <script src="../data/js/device-redirect-mobile.js"></script>
-
-    <button id="return_button" class="return_button" onclick="window.location.href='#start';">
-        <img src="data/imgs/index/return-arrow.svg" class="return-arrow" alt="retour en haut de la page">
-    </button>
 </head>
 
 <body>
@@ -30,7 +23,7 @@
         <nav>
             <div class="navbar">
                 <div class="container nav-container">
-                    <input class="checkbox" type="checkbox" name="" id="" />
+                    <input class="checkbox" type="checkbox" name="nav_checkbox" id="nav-checkbox" />
                     <div class="logo">
                         <div class="showed-links-nav">
                             <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf">
@@ -56,26 +49,29 @@
                         <span class="line line3"></span>
                     </div>
                     <div class="menu-items">
-                        <li>
-                            <a href="index.html">
-                            Accueil
-                        </a>
-                        </li>
-                        <li>
-                            <a href="index.html#projets">
-                            Projets
-                        </a>
-                        </li>
-                        <li>
-                            <a href="qui_suis-je.html">
-                            Qui suis-je ?
-                        </a>
-                        </li>
-                        <li>
-                            <a href="contact.html">
-                            Contact
-                        </a>
-                        </li>
+                        <ul>
+
+                            <li>
+                                <a href="index.html">
+                                    Accueil
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html#projets">
+                                    Projets
+                                </a>
+                            </li>
+                            <li>
+                                <a href="qui_suis-je.html">
+                                    Qui suis-je ?
+                                </a>
+                            </li>
+                            <li>
+                                <a href="contact.html">
+                                    Contact
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -247,11 +243,12 @@
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
-        <a href="https://www.behance.net/mthillayisnard"><img src="../data/imgs/all/logo-behance.png"
-                class="img-footer"></a>
-        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img
-                src="../data/imgs/all/logo-linkedin.png" class="img-footer"></a>
+        <a href="https://www.behance.net/mthillayisnard">
+            <img src="../data/imgs/all/logo-behance.png" class="img-footer" alt="Logo de Behance">
+        </a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173">
+            <img src="../data/imgs/all/logo-linkedin.png" class="img-footer" alt="Logo de Linkedin">
+        </a>
     </footer>
 </body>
-
 </html>
