Corrections mineurs sur index mobile et nav css mobile

--- a/m/index.html
+++ b/m/index.html
@@ -9,9 +9,9 @@
     <title>Accueil | mthillayisnard.fr</title>
 
     <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style-index.css" type="text/css">
-    <link rel="stylesheet" href="css/nav.css" type="text/css">
-    <link rel="stylesheet" href="css/footer.css" type="text/css">
+    <link rel="stylesheet" href="css/style-index.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins'>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Inter'>
 
@@ -31,12 +31,12 @@
                                     Mon CV
                                 </button>
                             </a>
-                            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173">
+                            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" aria-label="Lien vers la page Linkedin">
                                 <button class="btn-behance">
                                     <!--<img src="../data/imgs/all/logo-behance.png" alt="logo de behnace" class="nav_logo-bhnc">-->
                                 </button>
                             </a>
-                            <a href="https://www.behance.net/mthillayisnard">
+                            <a href="https://www.behance.net/mthillayisnard" aria-label="Lien vers la page Behance">
                                 <button class="btn-linkedin">
                                     <!--<img src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin" class="nav_logo-lkdn">-->
                                 </button>
